correct formatting with chatgpt

--- a/chatgpt/chatgpt_withapi.ipynb
+++ b/chatgpt/chatgpt_withapi.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "f25dda74-0b62-4a27-9566-aaaa27727c96",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "017cce17-f4e8-4df6-a3b5-2edef3714601",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "a2cf577c-4a80-4fbf-b4a0-8a0a61d16b61",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "86d2d69b",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
     "def send_to_chatgpt(question_list, client, image_path, encoded_image,\n",
     "                    model =\"gpt-4o-mini\", \n",
     "                    tmp_dir = '/Users/jnaiman/Downloads/tmp/',\n",
-    "                    test_run = True, fac=1.0, \n",
+    "                    test_run = True, fac=1.0, img_format='png',\n",
     "                    verbose=True):\n",
     "    # models as of ~May 2024\n",
     "    #model=\"gpt-4\",\n",
@@ -125,7 +125,8 @@
     "                            {\n",
     "                            \"type\": \"image_url\",\n",
     "                            \"image_url\": {\n",
-    "                                \"url\": f\"data:image/jpeg;base64,{encoded_image}\"\n",
+    "                                #\"url\": f\"data:image/jpeg;base64,{encoded_image}\" # PNG encoding??? does thsi need to change??\n",
+    "                                \"url\": f\"data:image/{img_format};base64,{encoded_image}\" \n",
     "                            }\n",
     "                            }\n",
     "                        ]\n",
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "c6eb280d-d109-4a03-8a76-ea47d5f8960c",
    "metadata": {},
    "outputs": [],
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "8957d21b",
    "metadata": {},
    "outputs": [
@@ -192,7 +193,7 @@
        " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/jsons/nclust_2_trial0.json']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7eb0608b",
    "metadata": {},
    "outputs": [
@@ -212,11 +213,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "on 0 of 3\n",
+      "on 0 of 4\n",
       "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_3_trial9.pickle\n",
-      "on 1 of 3\n",
+      "on 1 of 4\n",
       "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_5_trial3.pickle\n",
-      "on 2 of 3\n",
+      "on 2 of 4\n",
+      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_2_trial0.pickle\n",
+      "on 3 of 4\n",
       "   on question: how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
       "   on question: what are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
       "   on question: what are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.\n",
@@ -224,26 +227,26 @@
       "   on question: what are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
       "   on question: how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
       "Q: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
-      "ChatGPT A: {'nbars': 20}\n",
+      "ChatGPT A: {'nbars': 50}\n",
       "Real A:    50\n",
       "\n",
       "Q: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
-      "ChatGPT A: {'maximum x': 0.5}\n",
-      "Real A:    0.579999216258835\n",
+      "ChatGPT A: {'maximum x': '1.0'}\n",
+      "Real A:    0.9937474970967795\n",
       "\n",
       "Q: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
-      "ChatGPT A: {'minimum x': 0.3}\n",
-      "Real A:    0.21969474038591721\n",
+      "ChatGPT A: {'minimum x': 0.8}\n",
+      "Real A:    0.7019343870423396\n",
       "\n",
       "Q: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
-      "ChatGPT A: {'ngaussians': '5'}\n",
-      "Real A:    2\n",
+      "ChatGPT A: {'ngaussians': 3}\n",
+      "Real A:    3\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "iMax = 3\n",
+    "iMax = 4\n",
     "verbose = False\n",
     "test_run = False # run w/o actually pinging openai\n",
     "restart = False\n",
@@ -258,7 +261,7 @@
     "\n",
     "    # get image and base json\n",
     "    img_path = imgs_dir + json_path.split('/')[-1].removesuffix('.json') + '.' + img_format\n",
-    "    encoded_image, _, base_json, err = get_img_json_pair(img_path, json_path, dir_api, \n",
+    "    encoded_image, img_format_media, base_json, err = get_img_json_pair(img_path, json_path, dir_api, \n",
     "                                                      fac=fac, restart=restart,\n",
     "                                                      tmp_dir=tmp_dir)\n",
     "\n",
@@ -292,7 +295,7 @@
     "    responses = []\n",
     "    for question_list in qa:\n",
     "        response, prompt = send_to_chatgpt(question_list, client, img_path, encoded_image,\n",
-    "                    model = model, \n",
+    "                    model = model, img_format = img_format_media,\n",
     "                    test_run = test_run)\n",
     "        responses.append(response)\n",
     "        question_list['prompt'] = prompt\n",
@@ -304,6 +307,7 @@
     "    if not test_run:\n",
     "        with open(dir_api + json_path.split('/')[-1].removesuffix('.json')+ '.pickle', 'wb') as ff:\n",
     "            pickle.dump([qa, model], ff)\n",
+    "        print(\"just saved:\", dir_api + json_path.split('/')[-1].removesuffix('.json')+ '.pickle')\n",
     "    else:\n",
     "        print('Would store at:', dir_api + json_path.split('/')[-1].removesuffix('.json')+ '.pickle')\n"
    ]
@@ -320,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "6974b8e2",
    "metadata": {},
    "outputs": [
@@ -328,11 +332,12 @@
      "data": {
       "text/plain": [
        "['/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_5_trial3.pickle',\n",
+       " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_3_trial5.pickle',\n",
        " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_3_trial9.pickle',\n",
        " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_2_trial0.pickle']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,19 +349,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "636df058",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ifile = 2\n",
+    "ifile = 1\n",
     "with open(pickles[ifile], 'rb') as f:\n",
     "    qa_in = pickle.load(f)[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "11948f2b",
    "metadata": {},
    "outputs": [
@@ -364,33 +369,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_2_trial0.pickle\n",
+      "/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_3_trial5.pickle\n",
       "*********\n",
       "Prompt: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
       "   Real A: 50\n",
-      "ChatGPT A: {'nbars': 20}\n",
+      "ChatGPT A: {'nbars': 50}\n",
       "\n",
       "Prompt: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   Real A: 0.579999216258835\n",
-      "ChatGPT A: {'maximum x': 0.5}\n",
+      "   Real A: 0.9937474970967795\n",
+      "ChatGPT A: {'maximum x': '1.0'}\n",
       "\n",
       "Prompt: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   Real A: 0.3471408294007481\n",
-      "ChatGPT A: I'm unable to analyze specific data values in the plot directly. To calculate the mean value of the histogram's x-axis data, you would typically sum all the x-values, multiply by their frequencies, and then divide by the total count of data points. \n",
+      "   Real A: 0.8280702357864604\n",
+      "ChatGPT A: I'm unable to directly analyze or compute values from images. To find the mean data values for the figure panel you've provided, you'll need to look at the histogram and calculate the mean based on the data it represents.\n",
       "\n",
-      "If you can provide the data values used to create the histogram, I can assist you further.\n",
+      "If you have access to the data or can transcribe the values from the histogram, I can help guide you on how to calculate the mean or format it as JSON. Would you like help with that?\n",
       "\n",
       "Prompt: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   Real A: 0.33172813565120185\n",
-      "ChatGPT A: I'm unable to extract or calculate specific data values from images. If you have the data used for creating the plot, I can help you calculate the median. Please provide the data values, and I'll assist you with the calculation.\n",
+      "   Real A: 0.7942881461671237\n",
+      "ChatGPT A: I'm unable to extract or calculate data values from the image of the plot. If you have numerical data or specific values to analyze, please provide that information, and I'd be happy to assist!\n",
       "\n",
       "Prompt: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   Real A: 0.21969474038591721\n",
-      "ChatGPT A: {'minimum x': 0.3}\n",
+      "   Real A: 0.7019343870423396\n",
+      "ChatGPT A: {'minimum x': 0.8}\n",
       "\n",
       "Prompt: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
-      "   Real A: 2\n",
-      "ChatGPT A: {'ngaussians': '5'}\n",
+      "   Real A: 3\n",
+      "ChatGPT A: {'ngaussians': 3}\n",
       "\n"
      ]
     }
