very minimal tag in gemini

--- a/gemini/gemini_withapi.ipynb
+++ b/gemini/gemini_withapi.ipynb
@@ -23,9 +23,8 @@
     "#### Key Points (cp-claude)\n",
     "\n",
     "* API Key: Get your API key from the [Google Console](https://aistudio.google.com/app/apikey) -- note that you either have to create a new GCP project OR create the API key in an existing project\n",
-    "* Supported formats: JPEG, PNG, GIF, and WebP images\n",
-    "* Model: Use `claude-sonnet-4-20250514` for Claude Sonnet 4\n",
-    "* Size limits: Images should be under 5MB and no larger than 8000x8000 pixels\n",
+    "\n",
+    "**HERE**\n",
     "\n"
    ]
   },
