--- a/gemini/gemini_withapi.ipynb
+++ b/gemini/gemini_withapi.ipynb
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "de214bf1",
    "metadata": {},
    "outputs": [
@@ -316,15 +316,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "on 0 of 1\n",
+      "on 0 of 2\n",
+      "Prompt: I am going to show you an image. Now, how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
+      "  Real A: 50\n",
+      "Claude A: {'nbars': 40}\n",
+      "\n",
+      "Prompt: I am going to show you an image. Now, what are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
+      "  Real A: 0.49755257997301794\n",
+      "Claude A: {'maximum x': 0.5}\n",
+      "\n",
+      "Prompt: I am going to show you an image. Now, what are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.\n",
+      "  Real A: 0.34264837991488106\n",
+      "Claude A: {'mean x': 0.34}\n",
+      "\n",
+      "Prompt: I am going to show you an image. Now, what are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.\n",
+      "  Real A: 0.3895267656798662\n",
+      "Claude A: {'median x': 0.36}\n",
+      "\n",
+      "Prompt: I am going to show you an image. Now, what are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
+      "  Real A: 0.15863689997095148\n",
+      "Claude A: {'minimum x': 0.15}\n",
+      "\n",
+      "Prompt: I am going to show you an image. Now, how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
+      "  Real A: 3\n",
+      "Claude A: {'ngaussians': 2}\n",
+      "\n",
       "\n",
       "**** Cleaned QA ****\n",
-      "Just saved: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/gemini_api/nclust_3_trial9.pickle\n"
+      "Q: I am going to show you an image. Now, how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
+      "ChatGPT A: {'nbars': 40}\n",
+      "Real A:    50\n",
+      "\n",
+      "Q: I am going to show you an image. Now, what are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
+      "ChatGPT A: {'maximum x': 0.5}\n",
+      "Real A:    0.49755257997301794\n",
+      "\n",
+      "Q: I am going to show you an image. Now, what are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.\n",
+      "ChatGPT A: {'mean x': 0.34}\n",
+      "Real A:    0.34264837991488106\n",
+      "\n",
+      "Q: I am going to show you an image. Now, what are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.\n",
+      "ChatGPT A: {'median x': 0.36}\n",
+      "Real A:    0.3895267656798662\n",
+      "\n",
+      "Q: I am going to show you an image. Now, what are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
+      "ChatGPT A: {'minimum x': 0.15}\n",
+      "Real A:    0.15863689997095148\n",
+      "\n",
+      "Q: I am going to show you an image. Now, how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
+      "ChatGPT A: {'ngaussians': 2}\n",
+      "Real A:    3\n",
+      "\n",
+      "Just saved: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/gemini_api/nclust_3_trial9.pickle\n",
+      "on 1 of 2\n",
+      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/gemini_api/nclust_5_trial3.pickle\n"
      ]
     }
    ],
    "source": [
-    "iMax = 1\n",
+    "iMax = 2\n",
     "verbose = False\n",
     "test_run = False # run w/o actually pinging openai\n",
     "restart = False\n",
@@ -428,17 +478,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "id": "f8540406",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/gemini_api/nclust_3_trial9.pickle']"
+       "['/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/gemini_api/nclust_5_trial3.pickle',\n",
+       " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/gemini_api/nclust_3_trial9.pickle']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,19 +502,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "id": "bc36f1de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ifile = 0\n",
+    "ifile = 1\n",
     "with open(pickles[ifile], 'rb') as f:\n",
     "    qa_in = pickle.load(f)[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "id": "dc0a5ebf",
    "metadata": {},
    "outputs": [
@@ -474,23 +525,22 @@
        " 'A': 50,\n",
        " 'Level': 'Level 1',\n",
        " 'type': 'Plot-level questions',\n",
-       " 'Response': '```json',\n",
        " 'persona': 'You are a helpful assistant that can analyze images.',\n",
        " 'context': '',\n",
        " 'question': 'How many bars are there in the specified figure panel?',\n",
        " 'format': 'Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
        " 'plot number': 'plot0',\n",
-       " 'raw answer': '```json\\n{\"nbars\": 40}\\n```',\n",
        " 'usage': {'input_tokens': 310,\n",
        "  'output_tokens': 13,\n",
        "  'total_tokens': 323,\n",
        "  'cached_content_tokens': 0},\n",
-       " 'Response String': '```json',\n",
        " 'prompt': 'I am going to show you an image. Now, how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
-       " 'system prompt': 'You are a helpful assistant that responds only in valid JSON format. Do not include any explanations, reasoning, or text outside of the JSON response.'}"
+       " 'system prompt': 'You are a helpful assistant that responds only in valid JSON format. Do not include any explanations, reasoning, or text outside of the JSON response.',\n",
+       " 'Response': {'nbars': 40},\n",
+       " 'Response String': '```json\\n{\"nbars\": 40}\\n```'}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,43 +551,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "id": "a5630fef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prompt: I am going to show you an image. Now, how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
-      "  Real A: 50\n",
-      "Gemini A: {'nbars': 40}\n",
-      "\n",
-      "Prompt: I am going to show you an image. Now, what are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
-      "  Real A: 0.49755257997301794\n",
-      "Gemini A: {'maximum x': 0.5}\n",
-      "\n",
-      "Prompt: I am going to show you an image. Now, what are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.\n",
-      "  Real A: 0.34264837991488106\n",
-      "Gemini A: {'mean x': 0.33}\n",
-      "\n",
-      "Prompt: I am going to show you an image. Now, what are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.\n",
-      "  Real A: 0.3895267656798662\n",
-      "Gemini A: {'median x': 0.36}\n",
-      "\n",
-      "Prompt: I am going to show you an image. Now, what are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
-      "  Real A: 0.15863689997095148\n",
-      "Gemini A: {'minimum x': 0.15}\n",
-      "\n",
-      "Prompt: I am going to show you an image. Now, how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
-      "  Real A: 3\n",
-      "Gemini A: {'ngaussians': 2}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "qa_in = parse_for_errors_claude(qa_in, llm='gemini')"
+    "#qa_in = parse_for_errors_claude(qa_in, llm='gemini')"
    ]
   },
   {
@@ -558,11 +577,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/claude_api/nclust_3_trial9.pickle\n",
+      "/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/gemini_api/nclust_3_trial9.pickle\n",
       "*********\n",
       "Prompt: I am going to show you an image. Now, how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
       "  Real A: 50\n",
-      "Claude A: {'nbars': 100}\n",
+      "Claude A: {'nbars': 40}\n",
       "\n",
       "Prompt: I am going to show you an image. Now, what are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
       "  Real A: 0.49755257997301794\n",
@@ -570,19 +589,19 @@
       "\n",
       "Prompt: I am going to show you an image. Now, what are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.\n",
       "  Real A: 0.34264837991488106\n",
-      "Claude A: {'mean x': 0.3}\n",
+      "Claude A: {'mean x': 0.34}\n",
       "\n",
       "Prompt: I am going to show you an image. Now, what are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.\n",
       "  Real A: 0.3895267656798662\n",
-      "Claude A: {'median x': '0.3'}\n",
+      "Claude A: {'median x': 0.36}\n",
       "\n",
       "Prompt: I am going to show you an image. Now, what are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
       "  Real A: 0.15863689997095148\n",
-      "Claude A: {'minimum x': 0.1}\n",
+      "Claude A: {'minimum x': 0.15}\n",
       "\n",
       "Prompt: I am going to show you an image. Now, how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
       "  Real A: 3\n",
-      "Claude A: {'ngaussians': '2'}\n",
+      "Claude A: {'ngaussians': 2}\n",
       "\n"
      ]
     }
