lookig at tokens

--- a/gemini/gemini_withapi.ipynb
+++ b/gemini/gemini_withapi.ipynb
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "id": "4e69ab74",
    "metadata": {},
    "outputs": [
@@ -582,26 +582,38 @@
       "Prompt: I am going to show you an image. Now, how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
       "  Real A: 50\n",
       "Claude A: {'nbars': 40}\n",
+      "    input tokens: 310\n",
+      "    output tokens: 13\n",
       "\n",
       "Prompt: I am going to show you an image. Now, what are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
       "  Real A: 0.49755257997301794\n",
       "Claude A: {'maximum x': 0.5}\n",
+      "    input tokens: 321\n",
+      "    output tokens: 14\n",
       "\n",
       "Prompt: I am going to show you an image. Now, what are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.\n",
       "  Real A: 0.34264837991488106\n",
       "Claude A: {'mean x': 0.34}\n",
+      "    input tokens: 321\n",
+      "    output tokens: 15\n",
       "\n",
       "Prompt: I am going to show you an image. Now, what are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.\n",
       "  Real A: 0.3895267656798662\n",
       "Claude A: {'median x': 0.36}\n",
+      "    input tokens: 321\n",
+      "    output tokens: 15\n",
       "\n",
       "Prompt: I am going to show you an image. Now, what are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
       "  Real A: 0.15863689997095148\n",
       "Claude A: {'minimum x': 0.15}\n",
+      "    input tokens: 321\n",
+      "    output tokens: 15\n",
       "\n",
       "Prompt: I am going to show you an image. Now, how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
       "  Real A: 3\n",
       "Claude A: {'ngaussians': 2}\n",
+      "    input tokens: 320\n",
+      "    output tokens: 13\n",
       "\n"
      ]
     }
@@ -613,6 +625,8 @@
     "    print('Prompt:', qa_pairs['prompt'])\n",
     "    print('  Real A:', qa_pairs['A'])\n",
     "    print('Claude A:', qa_pairs['Response'])\n",
+    "    print('    input tokens:', qa_pairs['usage']['input_tokens'])\n",
+    "    print('    output tokens:', qa_pairs['usage']['output_tokens'])\n",
     "    print('')"
    ]
   },
