--- a/create_example_hists_jcdl2025.ipynb
+++ b/create_example_hists_jcdl2025.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "5a9fe905",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
     "# prob of getting a contour plot\n",
     "plot_params['contour']['prob'] = 0\n",
     "# prob of getting an image of the sky\n",
-    "plot_params['image of the sky']['prob'] = 0"
+    "#plot_params['image of the sky']['prob'] = 0"
    ]
   },
   {
